Внесены константы, добавлен метод обновления в бота(некорректный)